Remove redundant imports and usages of deprecated Java APIs
Some files were automatically slightly reformatted,
because they had trailing whitespace characters.